# Opentapes

./: .gitignore  LICENSE  README.md  package.json  sh.xaviers.Opentapes.yml  vue.config.js
resources/: sh.xaviers.Opentapes.desktop
src/: App.vue  config.ts  main.ts  shims-vue.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  error.rs  main.rs  mm_endpoints.rs  mm_session.rs
src/components/: AlbumCard.vue  ErrorDialog.vue  GridCard.vue  Header.vue  MixtapeCard.vue  MixtapeDetails.vue  Player.vue  PlayerControlBtn.vue  SessionDialog.vue  Settings.vue  Sidenav.vue  SongCard.vue  SongItem.vue  SvgIcon.vue
src/helpers/: album-helper.ts  playing-helper.ts  render-helper.ts
src/models/: album.ts  artist.ts  breakpoints.ts  error-dialog-data.ts  image.ts  mixtape.ts  single.ts  song-location.ts  song.ts
src/models/backend/: command.ts  commands.ts  error.ts  mm-session.ts
src/router/: index.ts  routes.ts
src/services/: browsing-service.ts  details-service.ts  mixtape-service.ts
src/store/: index.ts
src/store/modules/: browsing.ts  core.ts  playing.ts
src/styles/: styles.scss
src/views/: AlbumDetails.vue  BestSongs.vue  BestTapes.vue  Featured.vue  GreatestMixtapes.vue  GreatestSingles.vue  GreatestSongs.vue  GreatestTapes.vue  Latest.vue  MixtapeDetails.vue  MixtapeListView.vue  SingleDetails.vue  TrendingMixtapes.vue  TrendingSingles.vue  TrendingSongs.vue  TrendingTapes.vue  View.vue
src/views/abstract/: AlbumListView.vue  MixtapeListView.vue  View.vue
