[package]
name = "opentapes"
version = "0.1.0"
description = "Listen to Hip-Hop mixtapes, albums & songs on desktop, tablet, and Linux phone."
authors = ["Xavier Saliniere <xavier.saliniere@pm.me>"]
license = "GPL-3.0-only"
readme = "../README.md"
repository = "https://codeberg.org/xaviers/OpenTapes"
default-run = "opentapes"
edition = "2018"
build = "src/build.rs"
publish = false

[build-dependencies]
tauri-build = { version = "1.0.0-beta.3" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-beta.5", features = ["api-all"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
