[package]
name = "opentapes"
version = "0.1.0"
description = "A convergent app for streaming Hip-Hop music. Made with Vue.js & Tauri."
authors = ["Xavier Saliniere <xavier.saliniere@pm.me>"]
license = "GPL-3.0-only"
readme = "../README.md"
repository = "https://codeberg.org/xaviers/OpenTapes"
default-run = "opentapes"
edition = "2018"
build = "build.rs"
publish = false

[build-dependencies]
tauri-build = { version = "1.0.0-beta.4" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-beta.8", features = ["api-all"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
regex = "1.5.4"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
